# templates-tools-demos

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
include/template/: hello.hpp
src/: hello.cpp  main.cpp
tests/: test_hello.cpp
